presentation mostly written

--- a/wiki_hole/doc/presentation.tex
+++ b/wiki_hole/doc/presentation.tex
@@ -94,7 +94,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Niche projects?}
+  \frametitle{let the wookie win}
   \begin{columns}
     \begin{column}{0.5\textwidth}
       \includegraphics[height = 0.8\textheight, width = \textwidth, keepaspectratio = true]{figure/wiki_stats}
@@ -106,7 +106,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Niche projects?}
+  \frametitle{gotta catch 'em all}
   \begin{columns}
     \begin{column}{0.5\textwidth}
       \includegraphics[height = 0.8\textheight, width = \textwidth, keepaspectratio = true]{figure/wiki_stats}
@@ -118,7 +118,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Niche projects?}
+  \frametitle{facepalm}
   \begin{columns}
     \begin{column}{0.5\textwidth}
       \includegraphics[height = 0.8\textheight, width = \textwidth, keepaspectratio = true]{figure/wiki_stats}
@@ -131,18 +131,9 @@
 
 \begin{frame}
   \frametitle{Analysis time!}
-  \begin{columns}
-    \begin{column}{0.5\textwidth}
-      \includegraphics[width = \textwidth, keepaspectratio = true]{figure/tos}
-
-      \includegraphics[width = \textwidth, keepaspectratio = true]{figure/ds9}
-    \end{column}
-    \begin{column}{0.5\textwidth}
-      \includegraphics[width = \textwidth, keepaspectratio = true]{figure/tng}
-
-      \includegraphics[width = \textwidth, keepaspectratio = true]{figure/voy}
-    \end{column}
-  \end{columns}
+  \begin{center}
+    \includegraphics[height = 0.8\textheight, width = \textwidth, keepaspectratio = true]{figure/star-trek-insignia}
+  \end{center}
 \end{frame}
 
 \begin{frame}
@@ -160,6 +151,9 @@
         \item see what you can do with your degree?
       \end{itemize}
     \item link network. content pages. both in and out of universe.
+      \begin{itemize}
+        \item cut out admin pages (help, users, etc.)
+      \end{itemize}
   \end{itemize}
 \end{frame}
 
@@ -168,42 +162,120 @@
   \huge{Captains? (and commander\ldots )}
 
   \huge{Series?}
-  
-  \huge{Episodes?}
 
   \huge{etc.}
 \end{frame}
 
 \begin{frame}
   \frametitle{summaries}
-\end{frame}
 
-\begin{frame}
-  \frametitle{captains}
-  % image & value
-  % reveal with clicks
-\end{frame}
+  nodes: 34366
 
-\begin{frame}
-  \frametitle{series}
-  % image & value
-  % reveal with clicks
-\end{frame}
+  links: 788851
 
-\begin{frame}
-  \frametitle{episodes}
-  % image & value
-  % reveal with clicks
-\end{frame}
+  diameter: 10
 
-\begin{frame}
-  \frametitle{10 most important ``things''}
-  % reveal with clicks
+  mean links: \~{} 45; median: 19
+
+  closeness centrality: \(8.72 \cdot 10^{-6}\)
 \end{frame}
 
 \begin{frame}
   \frametitle{emergent structure?}
-  % graph plot with communities as nodes, vertex size based on number of nodes inside
+  yeah\ldots but graph is still too huge to show. sorry.
+
+  1040 modules (173 modules of size 1)
+
+  56358 links
+\end{frame}
+
+\begin{frame}
+  \frametitle{module sizes}
+  \includegraphics[height = 0.8\textheight, keepaspectratio = true]{figure/modules}
+\end{frame}
+
+\begin{frame}
+  \frametitle{module degree}
+  \includegraphics[height = 0.8\textheight, keepaspectratio = true]{figure/mod_deg}
+\end{frame}
+
+\begin{frame}
+  \frametitle{10 most important ``things''}
+  \begin{enumerate}
+    \item<10-> captain
+    \item<9-> earth
+    \item<8-> starfleet
+    \item<7-> federation
+    \item<6-> planet
+    \item<5-> star trek (out of universe)
+    \item<4-> star trek: the next generation
+    \item<3-> starship
+    \item<2-> human
+    \item<1-> star trek: deep space nine
+  \end{enumerate}
+\end{frame}
+
+\begin{frame}
+  \frametitle{weirdest click series}
+
+  tanagra family
+
+  gallos ii
+
+  inhabited planets
+
+  23rd century
+
+  san francisco
+
+  san francisco herald
+
+  jessica bradley
+
+  encounter at farpoint
+
+  henry vi, part iii
+
+  the naked now
+
+  decontamination
+
+\end{frame}
+
+\begin{frame}
+  \frametitle{series}
+  \begin{columns}
+    \begin{column}{0.5\textwidth}
+      \includegraphics[width = \textwidth, keepaspectratio = true]{figure/tos}
+
+      \includegraphics[width = \textwidth, keepaspectratio = true]{figure/ds9}
+    \end{column}
+    \begin{column}{0.5\textwidth}
+      \includegraphics[width = \textwidth, keepaspectratio = true]{figure/tng}
+
+      \includegraphics[width = \textwidth, keepaspectratio = true]{figure/voy}
+    \end{column}
+  \end{columns}
+\end{frame}
+
+\begin{frame}
+  \frametitle{series}
+  \include{series_table}
+\end{frame}
+
+\begin{frame}
+  \frametitle{captains}
+  \includegraphics[height = 0.8\textheight, keepaspectratio = true]{figure/Star-Trek-Captains}
+\end{frame}
+
+\begin{frame}
+  \frametitle{captains}
+  \include{captain_table}
+\end{frame}
+
+\begin{frame}
+  \frametitle{obviously}
+  \includegraphics[width = \textwidth, keepaspectratio = true]{figure/win}
 \end{frame}
 
 
