probably almost finished

--- a/wiki_hole/doc/presentation.tex
+++ b/wiki_hole/doc/presentation.tex
@@ -1,5 +1,6 @@
 \documentclass{beamer}
 \usepackage{graphicx, parskip, microtype}
+\usepackage{hyperref}
 
 \frenchspacing
 
@@ -46,6 +47,21 @@
 \end{frame}
 
 \begin{frame}
+  \frametitle{Just how much time could I waste?}
+
+  Read rate: 600 wpm, 16 hours/day = 17,000,000 words/month. 
+  
+  It would take \textbf{7} (!!!!!!) years to read wikipedia if it remained static. 
+\end{frame}
+
+\begin{frame}
+  \frametitle{at about 1:19 this afternoon\ldots}
+  \begin{center}
+    \includegraphics[height = 0.8\textheight, width = \textwidth, keepaspectratio = true]{figure/edits}
+  \end{center}
+\end{frame}
+
+\begin{frame}
   \frametitle{Who?}
   \begin{center}
     \includegraphics[height = 0.8\textheight, keepaspectratio = true]{figure/wiki_family}
@@ -57,6 +73,12 @@
   \begin{center}
     \includegraphics[height = 0.8\textheight, keepaspectratio = true]{figure/the_problem_with_wikipedia}
   \end{center}
+\end{frame}
+
+\begin{frame}
+  \frametitle{Thar be dragons}
+
+  \url{http://en.wikipedia.org/wiki/Special:Random}
 \end{frame}
 
 \begin{frame}
@@ -153,6 +175,7 @@
     \item link network. content pages. both in and out of universe.
       \begin{itemize}
         \item cut out admin pages (help, users, etc.)
+        \item my cleaning might have confused the characters from TOS with those from the newest films. whatever. this is informal and i can always fix it later. 
       \end{itemize}
   \end{itemize}
 \end{frame}
@@ -200,7 +223,40 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{10 most important ``things''}
+  \frametitle{We have them just where they want us}
+  What's in the first box? First few important things\ldots
+
+  \begin{itemize}
+    \item william shatner
+    \item j. j. abrams
+    \item leonard nimoy
+    \item jonathan frakes
+    \item patrick stewart
+    \item roberto orci (wrote recent star trek film)
+    \item robert picardo (the doctor from voyager)
+  \end{itemize}
+
+  real people. boring.
+\end{frame}
+
+\begin{frame}
+  \frametitle{Other boxes?}
+    \begin{itemize}
+      \item 2: deep space 9 and related things
+      \item 3: TOS and related things
+      \item 4: enterprise (series) and related
+      \item 5: planets and space
+      \item 6: star fleet
+      \item 7: voyager, borg, and related
+      \item 8: klingons
+      \item 9: production staff and related
+    \end{itemize}
+
+    smaller boxes overlap a little, but there is a ``structure''
+\end{frame}
+
+\begin{frame}
+  \frametitle{10 most important pages/``things''}
   \begin{enumerate}
     \item<10-> captain
     \item<9-> earth
