final version of talk

--- a/wiki_hole/doc/presentation.tex
+++ b/wiki_hole/doc/presentation.tex
@@ -69,6 +69,19 @@
 \end{frame}
 
 \begin{frame}
+  \frametitle{Go ahead and take my money}
+  \begin{center}
+    \includegraphics[width = \textwidth, height = 0.2\textheight, keepaspectratio = true]{figure/appeal_1}
+
+    \includegraphics[width = \textwidth, height = 0.2\textheight, keepaspectratio = true]{figure/appeal_2}
+
+    \includegraphics[width = \textwidth, height = 0.2\textheight, keepaspectratio = true]{figure/appeal_3}
+
+    \includegraphics[width = \textwidth, height = 0.2\textheight, keepaspectratio = true]{figure/appeal_4}
+  \end{center}
+\end{frame}
+
+\begin{frame}
   \frametitle{Problems? In my wiki?}
   \begin{center}
     \includegraphics[height = 0.8\textheight, keepaspectratio = true]{figure/the_problem_with_wikipedia}
@@ -113,6 +126,34 @@
 
     \includegraphics[width = 0.6\textwidth, keepaspectratio = true]{figure/got}
   \end{center}
+\end{frame}
+
+\begin{frame}
+  \frametitle{nothing is sacred}
+  \begin{columns}
+    \begin{column}{0.5\textwidth}
+      \includegraphics[width = \textwidth, height = 0.4\textheight, keepaspectratio = true]{figure/seinfeld}
+
+      \vspace{2cm}
+
+      \includegraphics[width = \textwidth, height = 0.4\textheight, keepaspectratio = true]{figure/dragonball}
+    \end{column}
+    \begin{column}{0.5\textwidth}
+      \includegraphics[width = \textwidth, height = 0.4\textheight, keepaspectratio = true]{figure/simpsons_1}
+
+      \vspace{1cm}
+
+      \includegraphics[width = \textwidth, height = 0.4\textheight, keepaspectratio = true]{figure/simpsons_2}
+    \end{column}
+  \end{columns}
+\end{frame}
+
+\begin{frame}
+  \frametitle{scariest link on the internet}
+
+  \url{http://tvtropes.org/pmwiki/randomitem.php?p=1}
+
+  you might loose 1 to 24 hours if you go to this link. and possibly your sanity.
 \end{frame}
 
 \begin{frame}
@@ -304,10 +345,14 @@
     \begin{column}{0.5\textwidth}
       \includegraphics[width = \textwidth, keepaspectratio = true]{figure/tos}
 
+      \vspace{1cm}
+
       \includegraphics[width = \textwidth, keepaspectratio = true]{figure/ds9}
     \end{column}
     \begin{column}{0.5\textwidth}
       \includegraphics[width = \textwidth, keepaspectratio = true]{figure/tng}
+
+      \vspace{0.5cm}
 
       \includegraphics[width = \textwidth, keepaspectratio = true]{figure/voy}
     \end{column}
