new captain pick

--- a/wiki_hole/doc/presentation.tex
+++ b/wiki_hole/doc/presentation.tex
@@ -375,7 +375,12 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{obviously}
+  \frametitle{and he's aged the best}
+  \includegraphics[width = \textwidth, height = 0.8\textheight, keepaspectratio = true]{figure/AllTheCaptains}
+\end{frame}
+
+\begin{frame}
+  \frametitle{so, obviously}
   \includegraphics[width = \textwidth, keepaspectratio = true]{figure/win}
 \end{frame}
 
