lots of clean up

--- a/wiki_hole/doc/presentation.tex
+++ b/wiki_hole/doc/presentation.tex
@@ -51,6 +51,8 @@
 
   Read rate: 600 wpm, 16 hours/day = 17,000,000 words/month. 
   
+  \vspace{1cm}
+
   It would take \textbf{7} (!!!!!!) years to read wikipedia if it remained static. 
 \end{frame}
 
@@ -153,7 +155,9 @@
 
   \url{http://tvtropes.org/pmwiki/randomitem.php?p=1}
 
-  you might loose 1 to 24 hours if you go to this link. and possibly your sanity.
+  you might loose 1 to 24 hours if you go to this link. 
+  
+  and possibly your sanity.
 \end{frame}
 
 \begin{frame}
@@ -181,7 +185,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{facepalm}
+  \frametitle{engaged}
   \begin{columns}
     \begin{column}{0.5\textwidth}
       \includegraphics[height = 0.8\textheight, width = \textwidth, keepaspectratio = true]{figure/wiki_stats}
@@ -207,7 +211,7 @@
         \item XML format
         \item every, and i mean every, current page
         \item no images
-        \item \~{} 313 MB
+        \item \~{} 313 MB (wikipedia is \~{} 40 GB)
       \end{itemize}
     \item R plus packages
       \begin{itemize}
@@ -239,7 +243,7 @@
 
   diameter: 10
 
-  mean links: \~{} 45; median: 19
+  mean links: \~ {}45; median: 19
 
   closeness centrality: \(8.72 \cdot 10^{-6}\)
 \end{frame}
@@ -360,7 +364,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{series}
+  \frametitle{and the winner is\ldots}
   \include{series_table}
 \end{frame}
 
@@ -370,7 +374,7 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{captains}
+  \frametitle{and the winner is\ldots}
   \include{captain_table}
 \end{frame}
 
