draft of lab meeting talk that is all thoughts

--- a/finnegan_labmeeting/sept_12.tex
+++ b/finnegan_labmeeting/sept_12.tex
@@ -31,9 +31,6 @@
 \begin{document}
 
 
-
-\section{Macroevolution and macroecology}
-
 \begin{frame}
   \begin{columns}
     \begin{column}{0.5\textwidth}
@@ -50,6 +47,7 @@
 \end{frame}
 
 \begin{frame}
+  \frametitle{Core disciplines}
   \begin{definition}
     \begin{itemize}
       \item \alert{macroevolution}: study of patterns which emerge when considering the evolutionary history of multiple species.
@@ -70,6 +68,10 @@
     \end{itemize}
   \end{definition}
 \end{frame}
+
+
+
+
 
 
 \begin{frame}
@@ -102,9 +104,9 @@
     \end{quote}
   \end{block}
 
-  \begin{itemize}
-    \item avoids selection versus sorting, \\``strict'' species selection versus effect macroevolution
-  \end{itemize}
+%  \begin{itemize}
+%    \item avoids selection versus sorting, \\``strict'' species selection versus effect macroevolution
+%  \end{itemize}
 \end{frame}
 
 \begin{frame}
@@ -116,8 +118,8 @@
 
 
   \begin{itemize}
-    \item \alert{logic:} if more fit, more likely to be present
-    \item distribution based definition (population)
+    \item \alert{logic:} if more fit, more likely to be present/``living''
+    \item distribution based definition (i.e. population level)
     \item other definitions can be derived based on definition of extinction
   \end{itemize}
 
@@ -189,6 +191,12 @@
   \tiny{\attrib{Bush and Bambach 2011 \em{Annu. Rev. Earth Planet Sci.}}}
 \end{frame}
 
+
+\begin{frame}
+  \begin{alertblock}{How do we ask and ``answer'' these questions?}
+
+  \end{alertblock}
+\end{frame}
 
 
 \begin{frame}
