first full draft of fossil coffee seminar talk

--- a/dogs_magic/talk.tex
+++ b/dogs_magic/talk.tex
@@ -399,6 +399,7 @@
       \item No effect of body size.
       \item Preference for taxa favoring epicontinental environments.
       \item Support for survival of unspecialized as generalization.
+      \item Risk increases with duration.
     \end{itemize}
   \end{block}
 \end{frame}
@@ -412,7 +413,7 @@
           \item strong preference expected to be shorter lived
           \item strong preference; fewer samples? unknown.
         \end{itemize}
-      \item Paleozoic versus Mesozoic
+      \item What about the generating observation and potential generating process?
     \end{itemize}
   \end{alertblock}
 \end{frame}
