updated figures to be more right

--- a/seminars/fossil_coffee_nov7.tex
+++ b/seminars/fossil_coffee_nov7.tex
@@ -152,23 +152,6 @@
 \end{frame}
 
 \begin{frame}
-  \frametitle{Statistical inference}
-  \begin{columns}
-    \begin{column}{0.45\textwidth}
-      \begin{center}
-        \includegraphics[width = \textwidth,height = 0.8\textheight,keepaspectratio = true]{figure/jaynes_theory}
-      \end{center}
-    \end{column}
-    \begin{column}{0.55\textwidth}
-      \begin{quote}
-        The theory of probability is the only mathematical tool available to help map the unknown and the uncontrollable.
-      \end{quote}
-      \attrib{Mandelbrot}
-    \end{column}
-  \end{columns}
-\end{frame}
-
-\begin{frame}
   \frametitle{Structured data in biology and paleontology}
 
   \begin{center}
@@ -737,7 +720,7 @@
 
 
 
-\section{Fossil/Not Fossil}
+\section{Fossil/Not Fossil and grappling with the effects of facies shift}
 
 \begin{frame}
   % to find a fossil we first need to find a ``good'' rock
